--- a/Campus.html
+++ b/Campus.html
@@ -18,54 +18,16 @@
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Custom CSS -->
 <link rel="stylesheet"
-	href="C:/PQTM19/Projectes/web.cifo.local/css/cifo.css">
+	href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 
 <title>CIFO La Violeta-Campus Virtual</title>
 </head>
 <body class="container-fluid">
-	<nav class="row navbar navbar-expand-lg navbar-dark bg-custom p-0">
-		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
-			width="130px" class="d-inline-block align-top" alt=""></a>
-		<button class="navbar-toggler" type="button" data-toggle="collapse"
-			data-target="#navbarNav" aria-controls="navbarNav"
-			aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon"></span>
-		</button>
-		<div class="collapse navbar-collapse pl-1" id="navbarNav">
-			<ul class="navbar-nav ml-auto">
-				<li class="nav-item"><a class="nav-link" href="Home.html">Home
-						<span class="sr-only">(current)</span>
-				</a></li>
-				<li class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Oferta Formativa</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
-				<li class="nav-item active"><a class="nav-link" href="Campus.html">Campus Virtual</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
-				<li class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
+<div data-include="Nav.html"></div>
+	<div data-include="Header.html"></div>
 
-			</ul>
-		</div>
-	</nav>
-
-	<header class="row">
-
-		<nav class="col-6 p-0" aria-label="breadcrumb">
-			<ol class="breadcrumb">
-				<li class="breadcrumb-item"><a href="home.html">Home</a></li>
-				<li class="breadcrumb-item active" aria-current="page">Campus
-					Virtual</li>
-			</ol>
-		</nav>
-		<div
-			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
-			<a href="#" class="fa fa-facebook"></a> <a href="#"
-				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
-				href="#" class="fa fa-linkedin"></a> <a href="#"
-				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
-		</div>
-	</header>
+	
 	<section class="row">
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
@@ -147,76 +109,7 @@
 		</div>
 	</section>
 
-	<footer class="row bg-custom">
-		<div
-			class="col-12 p-0 d-flex align-items-center justify-content-center bg-custom">
-			<a href="#" class="fa fa-facebook"></a> <a href="#"
-				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
-				href="#" class="fa fa-linkedin"></a> <a href="#"
-				class="fa fa-instagram"></a> <a href="#" class="fa fa-pinterest"></a>
-		</div>
-		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					DIRECTO A </a> <a href="Centros.html"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Centros</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Oferta
-					Formativa</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Biblioteca</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Contacto</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">eCampus</a>
-				<a href="Campus.html"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Campus
-					Virtual</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Entrar</a>
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Registrarse</a>
-			</div>
-		</div>
-
-		<div class="col-12 col-md-3 bg-custom pb-3 mb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					AYUDA </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Sobre
-					Gencat</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Accesibilidad
-					Formativa</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Mapa
-					Web</a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Aviso
-					Legal</a>
-
-			</div>
-		</div>
-		<div class="col-12 col-md-6 bg-custom pb-3">
-			<div class="list-group list-group-flush">
-				<a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center h4">
-					SERVEI D'OCUPACIÓ DE CATALUNYA </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center"><strong>Aviso
-						legal :</strong> De acuerdo con el artículo 17.1 de la Ley 19/2014, la ©
-					Generalidad de Cataluña permite la reutilización de los contenidos
-					y de los datos siempre que se cite la fuente y la fecha de
-					actualización y que no se desnaturalice la información (artículo 8
-					de la Ley 37/2007) y también que no se contradiga con una licencia
-					específica. </a> <a href="#"
-					class="list-group-item list-group-item-action bg-custom text-light text-center">
-					<img src="img/sepelogotip.jpg" class="d-inline-block float-left"
-					width="45%" height="auto" alt=""> <img
-					src="img/logotip_Iniciativaocupaciojuvenil_bn.jpg"
-					class="d-inline-block float-right" width="45%" height="auto" alt="">
-				</a>
-
-			</div>
-		</div>
-
-	</footer>
+<div data-include="Footer.html"></div>
 
 
 
@@ -230,5 +123,6 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
+		<script src="js/cifo.js" type="text/javascript"></script>
 </body>
 </html>
