--- a/Footer.html
+++ b/Footer.html
@@ -10,7 +10,7 @@
 			<div class="list-group list-group-flush">
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left h4">
-					DIRECTO A </a> <a href="Centros.html"
+					DIRECTO A </a> <a href="Centros.html" data-active="Centros.html"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Centros</a>
 				<a href="#"
 					class="list-group-item list-group-item-action bg-custom text-light text-center text-md-left">Oferta
