--- a/Nav.html
+++ b/Nav.html
@@ -9,11 +9,11 @@
 		</button>
 		<div class="collapse navbar-collapse pl-1" id="navbarNav">
 			<ul class="navbar-nav ml-auto">
-				<li data-active="Home.html" class="nav-item"><a class="nav-link" href="#">Home
+				<li data-active="Home.html" class="nav-item"><a class="nav-link" href="Home.html">Home
 					<!-- 	<span class="sr-only">(current)</span> -->
 				</a></li>
 				<li data-active="Centros.html" class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
-				<li data-active="Oferta.html" class="nav-item"><a class="nav-link" href="#">Oferta
+				<li data-active="Oferta.html" class="nav-item"><a class="nav-link" href="Oferta.html">Oferta
 						Formativa</a></li>
 				<li data-active="Biblioteca.html" class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
 				<li data-active="Contacto.html" class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
