--- a/Nav.html
+++ b/Nav.html
@@ -15,12 +15,12 @@
 				<li data-active="Centros.html" class="nav-item"><a class="nav-link" href="Centros.html">Centros</a></li>
 				<li data-active="Oferta.html" class="nav-item"><a class="nav-link" href="Oferta.html">Oferta
 						Formativa</a></li>
-				<li data-active="Biblioteca.html" class="nav-item"><a class="nav-link" href="#">Biblioteca</a></li>
-				<li data-active="Contacto.html" class="nav-item"><a class="nav-link" href="#">Contacto</a></li>
+				<li data-active="Biblioteca.html" class="nav-item"><a class="nav-link" href="Biblioteca.html">Biblioteca</a></li>
+				<li data-active="Contacto.html" class="nav-item"><a class="nav-link" href="Contacto.html">Contacto</a></li>
 				<li data-active="Campus.html" class="nav-item"><a class="nav-link" href="Campus.html">Campus
 						Virtual</a></li>
-				<li data-active="Entrar.html" class="nav-item"><a class="nav-link" href="#">Entrar</a></li>
-				<li data-active="Registrarse.html" class="nav-item"><a class="nav-link" href="#">Registrarse</a></li>
+				<li data-active="Entrar.html" class="nav-item"><a class="nav-link" href="Entrar.html">Entrar</a></li>
+				<li data-active="Registrarse.html" class="nav-item"><a class="nav-link" href="Registrarse.html">Registrarse</a></li>
 
 			</ul>
 		</div>
