--- a/Campus.html
+++ b/Campus.html
@@ -20,7 +20,7 @@
 <link rel="stylesheet"
 	href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <title>CIFO La Violeta-Campus Virtual</title>
 </head>
 <body class="container-fluid">
