--- a/Centros.html
+++ b/Centros.html
@@ -19,7 +19,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <title>Centres del CIFO</title>
 </head>
 <body class="container-fluid">
