--- a/Contacto.html
+++ b/Contacto.html
@@ -17,101 +17,42 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Custom CSS -->
-<link rel="stylesheet"
-	href="css/cifo.css">
+<link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <title>CIFO La Violeta</title>
 </head>
 <body class="container-fluid">
 	<div data-include="Nav.html"></div>
 	<div data-include="Header.html"></div>
-	
+
 	<section class="row">
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project One</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
+		<div class="col-12 col-lg-6">
+			<h1>Contacto</h1>
+			<form>
+				<div class="form-group">
+					<label for="exampleInputEmail1">Email address</label> <input
+						type="email" class="form-control" id="exampleInputEmail1"
+						aria-describedby="emailHelp" placeholder="Enter email"> <small
+						id="emailHelp" class="form-text text-muted">We'll never
+						share your email with anyone else.</small>
 				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project Two</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
+				<div class="form-group">
+					<label for="exampleInputPassword1">Password</label> <input
+						type="password" class="form-control" id="exampleInputPassword1"
+						placeholder="Password">
 				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project Three</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
+				<div class="form-group form-check">
+					<input type="checkbox" class="form-check-input" id="exampleCheck1">
+					<label class="form-check-label" for="exampleCheck1">Check
+						me out</label>
 				</div>
-			</div>
+				<button type="submit" class="btn btn-primary">Submit</button>
+			</form>
 		</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project Four</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project Five</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
-				</div>
-			</div>
-		</div>
-		<div class="col-12 col-md-6 col-lg-4">
-			<div class="card p-3 m-3">
-				<img src="https://picsum.photos/700/400" class="card-img-top"
-					alt="...">
-				<div class="card-body">
-					<h5 class="card-title">Project Six</h5>
-					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
-						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
-						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
-						dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-					<a href="#" class="btn btn-primary">Más Información</a>
-				</div>
-			</div>
-		</div>
+		<div class="col-12 col-lg-6"></div>
+
 	</section>
 
 
@@ -128,7 +69,7 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-			<!-- Own JavaScript -->
+	<!-- Own JavaScript -->
 	<script src="js/cifo.js" type="text/javascript"></script>
 </body>
 </html>
