--- a/Header.html
+++ b/Header.html
@@ -25,11 +25,11 @@
 				class="sr-only">Next</span>
 			</a>
 		</div>
-		<nav class="col-6 p-0" aria-label="breadcrumb">
+		<nav class="col-12 col-md-6 p-0" aria-label="breadcrumb">
 			
 		</nav>
 		<div
-			class="col-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
+			class="col-12 col-md-6 p-0 d-flex align-items-center justify-content-end  pr-md-3">
 			<a href="#" class="fa fa-facebook"></a> <a href="#"
 				class="fa fa-twitter"></a> <a href="#" class="fa fa-google"></a> <a
 				href="#" class="fa fa-linkedin"></a> <a href="#"
