--- a/Home.html
+++ b/Home.html
@@ -19,6 +19,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
+<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <title>CIFO La Violeta</title>
 </head>
