--- a/Contacto.html
+++ b/Contacto.html
@@ -48,7 +48,7 @@
 					<label class="form-check-label" for="exampleCheck1">Check
 						me out</label>
 				</div>
-				<button type="submit" class="btn btn-primary bg-primary">Submit</button>
+				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
 		<div class="col-12 col-lg-6"></div>
