--- a/Contacto.html
+++ b/Contacto.html
@@ -28,8 +28,8 @@
 	<div data-include="Header.html"></div>
 
 	<section class="row">
-		<div class="col-12 col-lg-6">
-			<h1>Contacto</h1>
+		<div class="col-12 col-lg-6 p-4">
+			<h1 class="pb-3">Contacto</h1>
 			<form>
 				<div class="form-group">
 					<label for="exampleInputEmail1">Email address</label> <input
@@ -51,7 +51,13 @@
 				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6"></div>
+		<div class="col-12 col-lg-6" id="cifoMap">
+		
+		
+		
+		AIzaSyBz3_10TLdHSmRnu1R-zLuZgj6wJX43FKs
+		
+		</div>
 
 	</section>
 
@@ -69,6 +75,7 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
+		<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBz3_10TLdHSmRnu1R-zLuZgj6wJX43FKs&callback=myMap"></script>
 	<!-- Own JavaScript -->
 	<script src="js/cifo.js" type="text/javascript"></script>
 </body>
