--- a/Contacto.html
+++ b/Contacto.html
@@ -51,8 +51,7 @@
 				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6" id="cifoMap">
-		</div>
+		<div class="col-12 col-lg-6" id="cifoMap"></div>
 
 	</section>
 
@@ -70,10 +69,20 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-		
+
 	<!-- Own JavaScript -->
 	<script src="js/cifo.js" type="text/javascript"></script>
-	
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBz3_10TLdHSmRnu1R-zLuZgj6wJX43FKs&callback=myMap"></script>
+	<script>
+		function myMap() {
+			var mapProp = {
+				center : new google.maps.LatLng(51.508742, -0.120850),
+				zoom : 5,
+			};
+			var map = new google.maps.Map(document.getElementById("cifoMap"),
+					mapProp);
+		}
+	</script>
+	<script
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBz3_10TLdHSmRnu1R-zLuZgj6wJX43FKs&callback=myMap"></script>
 </body>
 </html>
