--- a/Contacto.html
+++ b/Contacto.html
@@ -51,7 +51,9 @@
 				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6" id="cifoMap"></div>
+		<div class="col-12 col-lg-6">
+		<div  id="cifoMap" style="width:100%;height:400px"></div>
+		</div>
 
 	</section>
 
