--- a/Contacto.html
+++ b/Contacto.html
@@ -16,6 +16,8 @@
 <!-- Fonts CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- Map CSS -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
@@ -52,7 +54,7 @@
 			</form>
 		</div>
 		<div class="col-12 col-lg-6">
-		<div  id="cifoMap" style="width:100%;height:400px"></div>
+			<div id="cifoMap" style="width: 100%; height: 400px"></div>
 		</div>
 
 	</section>
@@ -72,19 +74,11 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
 
+	<!-- Map JS -->
+	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
+
 	<!-- Own JavaScript -->
 	<script src="js/cifo.js" type="text/javascript"></script>
-	<script>
-		function myMap() {
-			var mapProp = {
-				center : new google.maps.LatLng(51.508742, -0.120850),
-				zoom : 5,
-			};
-			var map = new google.maps.Map(document.getElementById("cifoMap"),
-					mapProp);
-		}
-	</script>
-	<script
-		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBz3_10TLdHSmRnu1R-zLuZgj6wJX43FKs&callback=myMap"></script>
+
 </body>
 </html>
