--- a/Contacto.html
+++ b/Contacto.html
@@ -16,7 +16,7 @@
 <!-- Fonts CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<!-- Map CSS -->
+<!-- Map Leaflet CSS -->
 <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
@@ -74,7 +74,7 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
 
-	<!-- Map JS -->
+	<!-- Map Leaflet JS -->
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
 
 	<!-- Own JavaScript -->
