--- a/Contacto.html
+++ b/Contacto.html
@@ -53,8 +53,8 @@
 				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6">
-			<div id="cifoMap" style="width: 100%; height: 400px"></div>
+		<div class="col-12 col-lg-6 p-3">
+			<div id="cifoMap" style="width: 100%; height: 300px"></div>
 		</div>
 
 	</section>
