--- a/Contacto.html
+++ b/Contacto.html
@@ -17,7 +17,8 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Map Leaflet CSS -->
-<link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
+<link rel="stylesheet"
+	href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
@@ -53,7 +54,7 @@
 				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
 			</form>
 		</div>
-		<div class="col-12 col-lg-6 p-3">
+		<div class="col-12 col-lg-6 p-4">
 			<div id="cifoMap" style="width: 100%; height: 300px"></div>
 		</div>
 
