# WARNING: head commit changed in the meantime
*

--- a/Cookies.html
+++ b/Cookies.html
@@ -201,7 +201,7 @@
 
 	<div class="alert fixed-bottom alert-primary m-4" id="boxRGPD" role="alert">
 		<p class='h4'>
-			Hacemos uso de cookies propias y de terceros para proporcionar una
+			ey Hacemos uso de cookies propias y de terceros para proporcionar una
 			mejor experiencia de usuario. Al seguir navegando entendemos que
 			acepta nuestra <a href="#" class="alert-link">Política de Cookies</a>
 		</p>
