--- a/Cookies.html
+++ b/Cookies.html
@@ -199,7 +199,8 @@
 			at minus harum omnis.</p>
 	</div>
 
-	<div class="alert fixed-bottom alert-primary m-4" id="boxRGPD" role="alert">
+<!-- Block for RGPD - adding cookie consent -->
+	<div class="alert fixed-bottom alert-primary m-4 d-none" id="boxRGPD" role="alert">
 		<p class='h4'>
 			ey Hacemos uso de cookies propias y de terceros para proporcionar una
 			mejor experiencia de usuario. Al seguir navegando entendemos que
