Cookie Consent Final Version

--- a/Cookies.html
+++ b/Cookies.html
@@ -202,7 +202,7 @@
 <!-- Block for RGPD - adding cookie consent -->
 	<div class="alert fixed-bottom alert-primary m-4 d-none" id="boxRGPD" role="alert">
 		<p class='h4'>
-			ey Hacemos uso de cookies propias y de terceros para proporcionar una
+			Hacemos uso de cookies propias y de terceros para proporcionar una
 			mejor experiencia de usuario. Al seguir navegando entendemos que
 			acepta nuestra <a href="#" class="alert-link">Política de Cookies</a>
 		</p>
