--- a/Cookies.html
+++ b/Cookies.html
@@ -18,6 +18,18 @@
 			llei de cookies amb javascript
 		</h1>
 	</div>
+	<div class="btn-group">
+		<button type="button" class="btn btn-info dropdown-toggle"
+			data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			Action</button>
+		<div class="dropdown-menu">
+			<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item"
+				href="#">Another action</a> <a class="dropdown-item" href="#">Something
+				else here</a>
+			<div class="dropdown-divider"></div>
+			<a class="dropdown-item" href="#">Separated link</a>
+		</div>
+	</div>
 	<div class="container">
 		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit
 			officia consequatur fuga, nesciunt optio. Magnam distinctio quo dolor
@@ -199,8 +211,9 @@
 			at minus harum omnis.</p>
 	</div>
 
-<!-- Block for RGPD - adding cookie consent -->
-	<div class="alert fixed-bottom alert-primary m-4 d-none" id="boxRGPD" role="alert">
+	<!-- Block for RGPD - adding cookie consent -->
+	<div class="alert fixed-bottom alert-primary m-4 d-none" id="boxRGPD"
+		role="alert">
 		<p class='h4'>
 			Hacemos uso de cookies propias y de terceros para proporcionar una
 			mejor experiencia de usuario. Al seguir navegando entendemos que
@@ -214,7 +227,7 @@
 		src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
-	<script type="text/javascript"src="js/cookies.js"></script>
-	<script type="text/javascript"src="js/persistence.js"></script>
+	<script type="text/javascript" src="js/cookies.js"></script>
+	<script type="text/javascript" src="js/persistence.js"></script>
 </body>
 </html>
