--- a/Cookies.html
+++ b/Cookies.html
@@ -18,16 +18,14 @@
 			llei de cookies amb javascript
 		</h1>
 	</div>
-	<div class="btn-group">
+	<div class="btn-group m-3">
 		<button type="button" class="btn btn-info dropdown-toggle"
 			data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			Action</button>
+			Select a Language</button>
 		<div class="dropdown-menu">
 			<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item"
 				href="#">Another action</a> <a class="dropdown-item" href="#">Something
 				else here</a>
-			<div class="dropdown-divider"></div>
-			<a class="dropdown-item" href="#">Separated link</a>
 		</div>
 	</div>
 	<div class="container">
@@ -229,5 +227,8 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="js/cookies.js"></script>
 	<script type="text/javascript" src="js/persistence.js"></script>
+	<script type="text/javascript" src="js/View.js"></script>
+	<script type="text/javascript" src="js/Controller.js"></script>
+	<script type="text/javascript" src="js/custom.js"></script>
 </body>
 </html>
