--- a/Cookies.html
+++ b/Cookies.html
@@ -22,10 +22,10 @@
 		<button type="button" class="btn btn-info dropdown-toggle"
 			data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 			Select a Language</button>
-		<div class="dropdown-menu">
-			<a class="dropdown-item" href="#">Action</a> <a class="dropdown-item"
-				href="#">Another action</a> <a class="dropdown-item" href="#">Something
-				else here</a>
+		<div id="langBtn" class="dropdown-menu">
+			<a class="dropdown-item" href="#">Action</a> 
+			<a class="dropdown-item" href="#">Another action</a> 
+			<a class="dropdown-item" href="#">Something else here</a>
 		</div>
 	</div>
 	<div class="container">
