--- a/Centros.html
+++ b/Centros.html
@@ -19,7 +19,8 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <title>Centres del CIFO</title>
 </head>
 <body class="container-fluid">
@@ -210,10 +211,10 @@
 						<li><span class="fa fa-envelope"></span>cifo_santfeliu.soc@gencat.cat</li>
 						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
 							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>c/Hospitalet, 3 (esquina N-II) 08980 - Sant
-Feliu de Llobregat (Barcelona)</li>
+						<li><span class="fa fa-map-marker"></span>c/Hospitalet, 3
+							(esquina N-II) 08980 - Sant Feliu de Llobregat (Barcelona)</li>
 						<li><br></li>
-						
+
 					</ul>
 
 				</div>
@@ -232,12 +233,13 @@ Feliu de Llobregat (Barcelona)</li>
 						<li><span class="fa fa-envelope"></span>cifo_tarragona.soc@gencat.cat</li>
 						<li><i class="fa fa-clock-o" aria-hidden="true"></i>Lunes-Viernes:
 							8:00 AM to 21:00 PM</li>
-						<li><span class="fa fa-map-marker"></span>Cami de la Budellera s/n – 43007 Tarragona</li>
+						<li><span class="fa fa-map-marker"></span>Cami de la
+							Budellera s/n – 43007 Tarragona</li>
 						<li><br></li>
 						<li><span class="fa fa-road"></span>Acceso
 							<ul>
 								<li>Autobuses L1 y L9, L11, L12, y L13</li>
-								
+
 							</ul></li>
 					</ul>
 
@@ -262,6 +264,6 @@ Feliu de Llobregat (Barcelona)</li>
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-	<script src="js/cifo.js" type="text/javascript"></script>
+	<script src="js/multipage.js" type="text/javascript"></script>
 </body>
 </html>
