--- a/Footer.html
+++ b/Footer.html
@@ -1,3 +1,4 @@
+<!--Insert here your MPA block code for your footer -->
 <footer class="row bg-custom">
 		<div
 			class="col-12 p-0 d-flex align-items-center justify-content-center bg-custom">
@@ -68,3 +69,16 @@
 		</div>
 
 	</footer>
+	
+	<!-- Block for RGPD - adding cookie consent -->
+	<div class="alert fixed-bottom alert-primary m-4 d-none" id="boxRGPD" role="alert">
+		<p class='h4'>
+			Hacemos uso de cookies propias y de terceros para proporcionar una
+			mejor experiencia de usuario. Al seguir navegando entendemos que
+			acepta nuestra <a href="#" class="alert-link">Política de Cookies</a>
+		</p>
+		<div class="btn btn-warning m-4" id="btnRGPD">Aceptar</div>
+	</div>
+	
+	<script type="text/javascript" src="js/cookies.js"></script>
+	<script type="text/javascript" src="js/persistence.js"></script>
