--- a/Campus.html
+++ b/Campus.html
@@ -17,17 +17,17 @@
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <!-- Custom CSS -->
-<link rel="stylesheet"
-	href="css/cifo.css">
+<link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <title>CIFO La Violeta-Campus Virtual</title>
 </head>
 <body class="container-fluid">
-<div data-include="Nav.html"></div>
+	<div data-include="Nav.html"></div>
 	<div data-include="Header.html"></div>
 
-	
+
 	<section class="row">
 		<div class="col-12 col-md-6 col-lg-4">
 			<div class="card p-3 m-3">
@@ -46,7 +46,8 @@
 			<div class="card p-3 m-3">
 				<img src="img/campus_2.jpg" class="card-img-top" alt="...">
 				<div class="card-body">
-					<h5 class="card-title">SERVICIOS DE INFORMACIÓN Y GESTIÓN ACADÉMICA</h5>
+					<h5 class="card-title">SERVICIOS DE INFORMACIÓN Y GESTIÓN
+						ACADÉMICA</h5>
 					<p class="card-text">Lorem ipsum dolor sit amet, consectetur
 						adipisicing elit. Amet numquam aspernatur eum quasi sapiente
 						nesciunt? Voluptatibus sit, repellat sequi itaque deserunt,
@@ -109,7 +110,7 @@
 		</div>
 	</section>
 
-<div data-include="Footer.html"></div>
+	<div data-include="Footer.html"></div>
 
 
 
@@ -123,6 +124,6 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-		<script src="js/cifo.js" type="text/javascript"></script>
+	<script src="js/multipage.js" type="text/javascript"></script>
 </body>
 </html>
