--- a/Contacto.html
+++ b/Contacto.html
@@ -33,25 +33,48 @@
 	<section class="row">
 		<div class="col-12 col-lg-6 p-4">
 			<h1 class="pb-3">Contacto</h1>
-			<form>
+			<form name="contactForm1" action="contactform.js" method="post"
+				novalidate>
 				<div class="form-group">
-					<label for="exampleInputEmail1">Email address</label> <input
-						type="email" class="form-control" id="exampleInputEmail1"
-						aria-describedby="emailHelp" placeholder="Enter email"> <small
-						id="emailHelp" class="form-text text-muted">We'll never
-						share your email with anyone else.</small>
+					<label for="InputName1">Nombre Completo</label> <input type="text"
+						name="nombre" class="form-control" id="InputName1"
+						aria-describedby="nameHelp" placeholder="Nombre" required>
+					<div class="invalid-feedback">Introduzca nombre por favor</div>
 				</div>
+
 				<div class="form-group">
-					<label for="exampleInputPassword1">Password</label> <input
-						type="password" class="form-control" id="exampleInputPassword1"
+					<label for="InputPhone1">Número de Teléfono</label> <input
+						type="tel" name="telefono" class="form-control" id="InputPhone1"
+						aria-describedby="emailHelp" placeholder="Teléfono">
+					<div class="invalid-feedback">Formato de Teléfono Incorrecto</div>
+
+				</div>
+
+				<div class="form-group">
+					<label for="InputEmail1">Dirección de Correo</label> <input
+						type="email" name="email" class="form-control" id="InputEmail1"
+						aria-describedby="emailHelp" placeholder="Email">
+					<div class="invalid-feedback">Correo Incorrecto</div>
+				</div>
+
+				<div class="form-group">
+					<label for="InputMessage1">Mensaje</label>
+					<textarea class="form-control" id="InputMessage1" name="comments" rows="3"></textarea>
+					<div class="invalid-feedback">Introduzca su mensaje por favor</div>
+				</div>
+
+
+				<!-- 	<div class="form-group">
+					<label for="InputPassword1">Password</label> <input type="password"
+						name="password" class="form-control" id="InputPassword1"
 						placeholder="Password">
-				</div>
-				<div class="form-group form-check">
+				</div> -->
+				<!-- 	<div class="form-group form-check">
 					<input type="checkbox" class="form-check-input" id="exampleCheck1">
 					<label class="form-check-label" for="exampleCheck1">Check
 						me out</label>
-				</div>
-				<button type="submit" class="btn btn-primary bg-custom">Submit</button>
+				</div> -->
+				<button type="submit" class="btn btn-primary bg-custom">Enviar</button>
 			</form>
 		</div>
 		<div class="col-12 col-lg-6 p-4">
@@ -65,6 +88,7 @@
 	<div data-include="Footer.html"></div>
 
 	<!-- Optional JavaScript -->
+	
 	<!-- jQuery first, then Popper.js, then Bootstrap JS -->
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
 		type="text/javascript"></script>
@@ -77,9 +101,9 @@
 
 	<!-- Map Leaflet JS -->
 	<script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js"></script>
-
+	
 	<!-- Own JavaScript -->
-	<script src="js/cifo.js" type="text/javascript"></script>
+	<script src="js/multipage.js" type="text/javascript"></script>
 
 </body>
 </html>
