--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,8 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
 <title>CIFO La Violeta</title>
 </head>
@@ -128,12 +129,8 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-	<!-- Own JavaScript -->
-	<script src="js/cifo.js" type="text/javascript"></script>
-	<!--  <script type="text/javascript">
-		window.addEventListener("load", function() {
-			includeHTML('home')
-		});
-	</script>-->
+	<script src="js/multipage.js" type="text/javascript"></script>
+
+
 </body>
 </html>
