--- a/Nav.html
+++ b/Nav.html
@@ -1,3 +1,5 @@
+<!--Insert here your MPA block code for the Navigation Bar -->
+
 <nav
 		class="row navbar navbar-expand-lg navbar-dark bg-custom py-0 pr-3 pl-0 position-sticky fixed-top">
 		<a class="navbar-brand p-0" href="#"><img src="img/soc.jpg"
