--- a/Oferta.html
+++ b/Oferta.html
@@ -16,11 +16,19 @@
 <!-- Fonts CSS -->
 <link rel="stylesheet"
 	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet"
+	href="https://fonts.googleapis.com/icon?family=Material+Icons">
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
 <link rel="stylesheet"
 	href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
+<!-- DataTables CSS -->
+<link rel="stylesheet" type="text/css"
+	href="https://cdn.datatables.net/1.10.20/css/jquery.dataTables.min.css">
+<!-- <link rel="stylesheet" type="text/css"
+	href="https://cdn.datatables.net/responsive/2.2.3/css/responsive.bootstrap4.min.css"> -->
 
 <title>CIFO La Violeta</title>
 </head>
@@ -31,19 +39,27 @@
 	<section class="row">
 
 		<div class="col-12 col-md-3">
-			<button class="btn btn-primary m-3" type="button"
+			<button class="btn-sm btn-primary m-3" type="button"
 				data-toggle="collapse" data-target="#collapseSelect1"
-				aria-expanded="false" aria-controls="collapseExample"><span class='fa fa-filter'></span>Button
-				with selection<span class='fa fa-caret-down'></button>
+				aria-expanded="false" aria-controls="collapseExample">
+				<span class='fa fa-filter'></span>Filtro<span
+					class='fa fa-caret-down'>
+			</button>
 			<div class="collapse" id="collapseSelect1">
-				<select class="custom-select m-3">
-					<option selected>Open this select menu</option>
+				<select class="custom-select" id="area">
+					<option selected>Selecciona Area</option>
+					<option value="1">One</option>
+					<option value="2">Two</option>
+					<option value="3">Three</option>
+				</select> <select class="custom-select my-3" id="centro">
+					<option selected>Selecciona Centro</option>
 					<option value="1">One</option>
 					<option value="2">Two</option>
 					<option value="3">Three</option>
 				</select>
+
 			</div>
-			<button class="btn btn-primary mb-5 mt-3 mx-3" type="button"
+			<button class="btn btn-primary mb-5 mt-3 mx-3 d-block" type="button"
 				data-toggle="collapse" data-target="#collapseSelect2"
 				aria-expanded="false" aria-controls="collapseExample">Button
 				with data-target</button>
@@ -57,7 +73,18 @@
 
 
 		</div>
-		<div class="col-12 col-md-9"></div>
+		<div class="col-12 col-md-9">
+			<table id="tblIndustry"
+				class="table table-striped table-bordered dt-responsive nowrap"
+				style="width: 80%">
+
+
+			</table>
+
+
+
+
+		</div>
 	</section>
 
 
@@ -78,6 +105,39 @@
 		type="text/javascript"></script>
 	<!-- Own JavaScript -->
 	<script src="js/cifo.js" type="text/javascript"></script>
+	
+	<!-- DataTables -->
+	<script
+		src="https://cdn.datatables.net/1.10.20/js/jquery.dataTables.min.js"
+		charset="utf8" type="text/javascript"></script>
+
+	<script
+		src="https://cdn.datatables.net/1.10.20/js/dataTables.bootstrap4.min.js">
+		
+	</script>
+	<script type="text/javascript"
+		src="https://cdn.datatables.net/responsive/2.2.3/js/dataTables.responsive.min.js"></script>
+	<script>
+	  var xhr= new XMLHttpRequest();
+		
+		xhr.addEventListener('load',()=>{
+			
+			var objAreas = JSON.parse(xhr.responseText);
+
+			for (i=0;i<objAreas.length;i++){
+				
+				document.getElementById('area').innerHTML += `<option value='${objAreas[i].id}'>${objAreas[i].nombre}</option>`
+			}
+			
+			
+		})	
+		
+		xhr.open("GET", "app.cifo.local/api/public/formacion/areas", true);
+		xhr.send();
+	
+	
+	
+	</script>
 
 </body>
 </html>
