--- a/Oferta.html
+++ b/Oferta.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 <head>
 <!-- Required meta tags -->
 <meta charset="utf-8">
@@ -21,8 +21,7 @@
 <!-- Custom CSS -->
 <link rel="stylesheet" href="css/cifo.css">
 <link rel="icon" href="img/favicon.ico" type="image/gif" sizes="16x16">
-<link rel="stylesheet"
-	href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 
 <!-- DataTables CSS -->
 <link rel="stylesheet" type="text/css"
@@ -99,8 +98,7 @@
 	<script
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
 		type="text/javascript"></script>
-	<!-- Own JavaScript -->
-	<script src="js/cifo.js" type="text/javascript"></script>
+
 
 	<!-- DataTables -->
 	<script
